--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>ATS Resume Builder</title>
+  <link rel="stylesheet" href="assets/css/global.css">
+</head>
+<body>
+
+  <div class="home">
+    <h1>ATS Resume Builder</h1>
+    <p>Create ATS-friendly resumes with live preview</p>
+
+    <a href="form/resume-form.html" class="btn">
+      Create Resume
+    </a>
+  </div>
+
+</body>
+</html>
 
