Create initial ATS resume HTML structure

--- a/resumes/ats-resume.html
+++ b/resumes/ats-resume.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>ATS Resume</title>
+  <link rel="stylesheet" href="../assets/css/resume.css">
+</head>
+<body>
+
+<div class="resume">
+  <h1 id="r-name">Your Name</h1>
+  <p id="r-contact"></p>
+
+  <h2>SUMMARY</h2>
+  <p id="r-summary"></p>
+</div>
+
+<script src="../assets/js/preview.js"></script>
+</body>
+</html>
 
