--- a/form/resume-form.html
+++ b/form/resume-form.html
@@ -13,7 +13,7 @@
     <h2>Resume Content</h2>
 
     <label>Full Name</label>
-    <input id="name" placeholder="Sahana J P">
+    <input id="name" placeholder="Enter your full name">
 
     <label>Email</label>
     <input id="email" placeholder="email@example.com">
@@ -27,7 +27,12 @@
     <button onclick="saveResume()">Preview Resume</button>
   </div>
 
-  <iframe src="../resumes/ats-resume.html" class="preview"></iframe>
+  <iframe 
+  id="resumePreview"
+  src="../resumes/ats-resume.html"
+  class="preview">
+</iframe>
+
 </div>
 
 <script src="../assets/js/form.js"></script>
