--- a/form/resume-form.html
+++ b/form/resume-form.html
@@ -25,7 +25,12 @@
     <textarea id="summary"></textarea>
 
     <button onclick="saveResume()">Preview Resume</button>
+    <button class="clear-btn" onclick="clearResume()">
+  Clear Resume
+</button>
+
   </div>
+  
 
   <iframe 
   id="resumePreview"
