--- a/resumes/ats-resume.html
+++ b/resumes/ats-resume.html
@@ -11,34 +11,38 @@
 
   <h1 id="r-name"></h1>
   <p id="r-contact"></p>
-
   <section>
-    <h2>SUMMARY</h2>
-    <p id="r-summary"></p>
+  <h2>
+    SUMMARY
+    <button class="edit-btn" onclick="editSection('summary')">Edit</button>
+  </h2>
+  <p id="r-summary"></p>
+</section>
+
   </section>
 
   <section>
-    <h2>SKILLS</h2>
+    <h2>SKILLS <button onclick="editSection('skills')">Edit</button></h2>
     <p id="r-skills"></p>
   </section>
 
   <section>
-    <h2>WORK EXPERIENCE</h2>
+    <h2>WORK EXPERIENCE <button onclick="editSection('experience')">Edit</button></h2>
     <pre id="r-experience"></pre>
   </section>
 
   <section>
-    <h2>PROJECTS</h2>
+    <h2>PROJECTS <button onclick="editSection('projects')">Edit</button></h2>
     <pre id="r-projects"></pre>
   </section>
 
   <section>
-    <h2>EDUCATION</h2>
+    <h2>EDUCATION <button onclick="editSection('education')">Edit</button></h2>
     <p id="r-education"></p>
   </section>
 
   <section>
-    <h2>CERTIFICATIONS</h2>
+    <h2>CERTIFICATIONS <button onclick="editSection('certifications')">Edit</button></h2>
     <p id="r-certifications"></p>
   </section>
 
