--- a/resumes/ats-resume.html
+++ b/resumes/ats-resume.html
@@ -14,7 +14,7 @@
   <section>
   <h2>
     SUMMARY
-    <button class="edit-btn" onclick="editSection('summary')">Edit</button>
+    <button class="edit-btn" onclick="editLefftSection('summary')">Edit</button>
   </h2>
   <p id="r-summary"></p>
 </section>
@@ -22,27 +22,27 @@
   </section>
 
   <section>
-    <h2>SKILLS <button onclick="editSection('skills')">Edit</button></h2>
+    <h2>SKILLS <button onclick="editLeftSection('skills')">Edit</button></h2>
     <p id="r-skills"></p>
   </section>
 
   <section>
-    <h2>WORK EXPERIENCE <button onclick="editSection('experience')">Edit</button></h2>
+    <h2>WORK EXPERIENCE <button onclick="editLeftSection('experience')">Edit</button></h2>
     <pre id="r-experience"></pre>
   </section>
 
   <section>
-    <h2>PROJECTS <button onclick="editSection('projects')">Edit</button></h2>
+    <h2>PROJECTS <button onclick="editLeftSection('projects')">Edit</button></h2>
     <pre id="r-projects"></pre>
   </section>
 
   <section>
-    <h2>EDUCATION <button onclick="editSection('education')">Edit</button></h2>
+    <h2>EDUCATION <button onclick="editLeftSection('education')">Edit</button></h2>
     <p id="r-education"></p>
   </section>
 
   <section>
-    <h2>CERTIFICATIONS <button onclick="editSection('certifications')">Edit</button></h2>
+    <h2>CERTIFICATIONS <button onclick="editLeftSection('certifications')">Edit</button></h2>
     <p id="r-certifications"></p>
   </section>
 
