Fix casing in labels and IDs for form fields

--- a/form/resume-form.html
+++ b/form/resume-form.html
@@ -26,21 +26,21 @@
     <label>Summary <button type="button" onclick="editLeftSection('summary')">Edit</button></label>
     <textarea id="summary"></textarea>
    
-    <label>Skills (comma separated)<button type="button" onclick="editLeftSection('Skills')">Edit</button></label>
+    <label>Skills (comma separated)<button type="button" onclick="editLeftSection('skills')">Edit</button></label>
     <textarea id="skills"></textarea>
     
 
-    <label>Work Experience <button type="button" onclick="editLeftSection('Experience')">Edit</button></label>
+    <label>Work Experience <button type="button" onclick="editLeftSection('experience')">Edit</button></label>
     <textarea id="experience"
       placeholder="Job Title – Company
 • Responsibility 1
 • Responsibility 2"></textarea>
 
-    <label>Projects<button type="button" onclick="editLeftSection('Projects')">Edit</button></label>
+    <label>Projects<button type="button" onclick="editLeftSection('projects')">Edit</button></label>
     <textarea id="projects"
       placeholder="Project Name – Description"></textarea>
 
-    <label>Education <button type="button" onclick="editLeftSection('Education')">Edit</button></label>
+    <label>Education <button type="button" onclick="editLeftSection('education')">Edit</button></label>
     <textarea id="education"></textarea>
 
     <label>Certifications<button type="button" onclick="editLeftSection('certification')">Edit</button></label>
