--- a/form/resume-form.html
+++ b/form/resume-form.html
@@ -43,7 +43,7 @@
     <label>Education <button type="button" onclick="editLeftSection('education')">Edit</button></label>
     <textarea id="education"></textarea>
 
-    <label>Certifications<button type="button" onclick="editLeftSection('certification')">Edit</button></label>
+    <label>Certifications<button type="button" onclick="editLeftSection('certifications')">Edit</button></label>
     <textarea id="certifications"></textarea>
 
     <button onclick="saveResume()">Preview Resume</button>
