--- a/resumes/ats-resume.html
+++ b/resumes/ats-resume.html
@@ -68,7 +68,7 @@
 </div>
 
 <div class="actions">
-  <button onclick="downloadPDF()">⬇️ Download PDF</button>
+    <button onclick="window.print()">Download as PDF</button>
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.3/html2pdf.bundle.min.js"></script>
