--- a/form/resume-form.html
+++ b/form/resume-form.html
@@ -23,27 +23,33 @@
     <label>Phone</label>
     <input id="phone">
 
-    <label>Summary <button type="button" onclick="editLeftSection('summary')">Edit</button></label>
+    <label>Summary </label>
+    <button type="button" class="edit-btn" onclick="editLeftSection('summary')">Edit</button>
     <textarea id="summary"></textarea>
    
-    <label>Skills (comma separated)<button type="button" onclick="editLeftSection('skills')">Edit</button></label>
+    <label>Skills (comma separated)</label>
+    <button type="button" class="edit-btn" onclick="editLeftSection('skills')">Edit</button>
     <textarea id="skills"></textarea>
     
 
-    <label>Work Experience <button type="button" onclick="editLeftSection('experience')">Edit</button></label>
+    <label>Work Experience </label>
+     <button type="button" class="edit-btn" onclick="editLeftSection('experience')">Edit</button>
     <textarea id="experience"
       placeholder="Job Title – Company
 • Responsibility 1
 • Responsibility 2"></textarea>
 
-    <label>Projects<button type="button" onclick="editLeftSection('projects')">Edit</button></label>
+    <label>Projects</label>
+     <button type="button" class="edit-btn" onclick="editLeftSection('projects')">Edit</button>
     <textarea id="projects"
       placeholder="Project Name – Description"></textarea>
 
-    <label>Education <button type="button" onclick="editLeftSection('education')">Edit</button></label>
+    <label>Education</label>
+     <button type="button" class="edit-btn" onclick="editLeftSection('education')">Edit</button>
     <textarea id="education"></textarea>
 
-    <label>Certifications<button type="button" onclick="editLeftSection('certifications')">Edit</button></label>
+    <label>Certifications</label>
+     <button type="button" class="edit-btn" onclick="editLeftSection('certifications')">Edit</button>
     <textarea id="certifications"></textarea>
 
    
