--- a/form/resume-form.html
+++ b/form/resume-form.html
@@ -29,33 +29,33 @@
     <input id="phone">
 
     <label>Summary </label>
-    <button type="button" class="edit-btn" onclick="editLeftSection('summary')">Edit <i class="fa-solid fa-pen-to-square"></i></button>
+    <button type="button" class="edit-btn" onclick="editLeftSection('summary')"><i class="fa-solid fa-pen-to-square"></i></button>
     
     <textarea id="summary"></textarea>
    
     <label>Skills (comma separated)</label>
-    <button type="button" class="edit-btn" onclick="editLeftSection('skills')">Edit <i class="fa-solid fa-pen-to-square"></i></button>
+    <button type="button" class="edit-btn" onclick="editLeftSection('skills')"><i class="fa-solid fa-pen-to-square"></i></button>
     <textarea id="skills"></textarea>
     
 
     <label>Work Experience </label>
-     <button type="button" class="edit-btn" onclick="editLeftSection('experience')">Edit <i class="fa-solid fa-pen-to-square"></i></button>
+     <button type="button" class="edit-btn" onclick="editLeftSection('experience')"> <i class="fa-solid fa-pen-to-square"></i></button>
     <textarea id="experience"
       placeholder="Job Title – Company
 • Responsibility 1
 • Responsibility 2"></textarea>
 
     <label>Projects</label>
-     <button type="button" class="edit-btn" onclick="editLeftSection('projects')">Edit <i class="fa-solid fa-pen-to-square"></i></button>
+     <button type="button" class="edit-btn" onclick="editLeftSection('projects')"> <i class="fa-solid fa-pen-to-square"></i></button>
     <textarea id="projects"
       placeholder="Project Name – Description"></textarea>
 
     <label>Education</label>
-     <button type="button" class="edit-btn" onclick="editLeftSection('education')">Edit <i class="fa-solid fa-pen-to-square"></i></button>
+     <button type="button" class="edit-btn" onclick="editLeftSection('education')"><i class="fa-solid fa-pen-to-square"></i></button>
     <textarea id="education"></textarea>
 
     <label>Certifications</label>
-     <button type="button" class="edit-btn" onclick="editLeftSection('certifications')">Edit <i class="fa-solid fa-pen-to-square"></i></button>
+     <button type="button" class="edit-btn" onclick="editLeftSection('certifications')"><i class="fa-solid fa-pen-to-square"></i></button>
     <textarea id="certifications"></textarea>
 
    
