--- a/form/resume-form.html
+++ b/form/resume-form.html
@@ -25,12 +25,11 @@
     <input id="email">
 
     <label>Phone</label>
-    <buttom type="button" class="edit-btn" onclick="editLeftSection('phone')"><i class="fa-solid fa-pen-to-square"></i></buttom>
+    <buttom type="button" class="edit-btn" onclick="editLeftSection('phone')"><i class="fa-solid fa-pen-to-square"></i></button>
     <input id="phone">
 
     <label>Summary </label>
     <button type="button" class="edit-btn" onclick="editLeftSection('summary')"><i class="fa-solid fa-pen-to-square"></i></button>
-    
     <textarea id="summary"></textarea>
    
     <label>Skills (comma separated)</label>
