--- a/form/resume-form.html
+++ b/form/resume-form.html
@@ -22,10 +22,11 @@
     <input id="name">
 
     <label>Email</label>
+     <button type="button" class="edit-btn" onclick="editLeftSection('email')"><i class="fa-solid fa-pen-to-square"></i></button>
     <input id="email">
 
     <label>Phone</label>
-    <buttom type="button" class="edit-btn" onclick="editLeftSection('phone')"><i class="fa-solid fa-pen-to-square"></i></button>
+    <button type="button" class="edit-btn" onclick="editLeftSection('phone')"><i class="fa-solid fa-pen-to-square"></i></button>
     <input id="phone">
 
     <label>Summary </label>
