--- a/form/resume-form.html
+++ b/form/resume-form.html
@@ -18,6 +18,22 @@
   <div class="form-panel">
     <h2>Resume Content</h2>
 
+    <div class="form-section">
+  <div class="section-header">
+    <label>Summary</label>
+    <button
+      type="button"
+      class="edit-btn"
+      onclick="editLeftSection('summary')"
+      title="Edit Summary"
+    >
+      <i class="fa-solid fa-pen-to-square"></i>
+    </button>
+  </div>
+
+  <textarea id="summary"></textarea>
+</div>
+
     <label>Full Name</label>
     <input id="name">
 
