--- a/resumes/ats-resume.html
+++ b/resumes/ats-resume.html
@@ -11,7 +11,7 @@
    <h1 id="r-name" class="resume-name"></h1>
  
 
-  <p id="r-contact"></p>
+  <p id="r-contact" class="contact"></p>
 
   <!-- SUMMARY -->
   <section>
