--- a/form/resume-form.html
+++ b/form/resume-form.html
@@ -19,25 +19,27 @@
 
   <!-- LEFT PANEL -->
   <div class="form-panel">
-    <h2>Resume Content</h2>
+   <!-- HEADER ROW -->
+<div class="form-header">
+  <h2>Resume Content</h2>
 
-    <!-- ATS SCORE -->
-<div class="ats-score-card">
-  <div class="circle-wrap">
-    <svg width="120" height="120">
-      <circle class="bg" cx="60" cy="60" r="52"></circle>
-      <circle class="progress" cx="60" cy="60" r="52"></circle>
-    </svg>
+  <!-- ATS SCORE -->
+  <div class="ats-score-card">
+    <div class="circle-wrap">
+      <svg width="120" height="120">
+        <circle class="bg" cx="60" cy="60" r="52"></circle>
+        <circle class="progress" cx="60" cy="60" r="52"></circle>
+      </svg>
 
-    <div class="score-text">
-      <span id="atsScore">0</span>
-      <small id="atsLabel">POOR</small>
+      <div class="score-text">
+        <span id="atsScore">0</span>
+        <small id="atsLabel">POOR</small>
+      </div>
     </div>
+
+    <div class="resume-strength">RESUME STRENGTH</div>
   </div>
-
-  <div class="resume-strength">RESUME STRENGTH</div>
 </div>
-
 
     <!-- FULL NAME -->
     <div class="form-section">
